--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,8 @@
     <string name="project_on_github_link">Project on GITHUB (Link)</string>
     <string name="submit">Submit</string>
     <string name="project_submission">Project Submission</string>
+    <string name="are_you_sure">Are you Sure?</string>
+    <string name="yes">Yes</string>
+    <string name="submission_successful">Submission Successful</string>
+    <string name="submission_not_successful">Submission Not Successful</string>
 </resources>
